@@ -1,6 +1,11 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+ [Dependencies::Stats]
+ - Dependencies changed since 1.005000, see misc/*.deps* for details
+ - develop: +3 ↑3 -1 (recommends: ↓1, suggests: ↑2)
+ - runtime: (recommends: +2 ↓1)
+ - test: (recommends: ↓1)
 
 1.005000 2014-11-06T15:24:12Z 0194343
  [Dependencies::Stats]
